src/javacc/FlipParser.java
/* FlipParser.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. FlipParser.java */
package javacc.generated;
import java.io.File;
import java.io.Reader;
import java.io.IOException;
import java.io.FileInputStream;
import java.io.InputStreamReader;
import java.nio.charset.StandardCharsets;
import java.io.BufferedReader;

import javacc.util.TreePrinter;import javacc.visitors.FixExpressionsVisitor;import javacc.visitors.PrintingVisitor;import javacc.visitors.TypeCheckerVisitor;import javacc.visitors.codegeneration.CodeGenerationVisitor;import org.apache.log4j.Logger;

public class FlipParser/*@bgen(jjtree)*/implements FlipParserTreeConstants, FlipParserConstants {/*@bgen(jjtree)*/
  protected JJTFlipParserState jjtree = new JJTFlipParserState();private static final Logger logger = Logger.getLogger(FlipParser.class);

  public static void main(String[] args) {
    long startTime = System.nanoTime();
    try {
      String filename = System.getProperty("user.dir") + File.separator + "src" + File.separator + "javacc" + File.separator + "asshole";
      Reader reader = new InputStreamReader(new FileInputStream(filename), StandardCharsets.US_ASCII);
      FlipParser p = new FlipParser(reader);

      try {
        SimpleNode node = p.prog();
        node.jjtAccept(new FixExpressionsVisitor(), null);
        node.jjtAccept(new TypeCheckerVisitor(), null);
        node.jjtAccept(new CodeGenerationVisitor(), null);

        float endTimeSeconds = ((float)(System.nanoTime() - startTime)) / 1000000000F;
        System.out.format("Compiling this FLIP program took %.1f seconds.\n", endTimeSeconds);
//        TreePrinter.printTree(node, "");
        execTarget();
      } catch (ParseException e) {
        e.printStackTrace();
        logger.error("Failed to parse because:", e);
      }
    } catch (IOException e) {
      e.printStackTrace();
      logger.error("An IOException occurred while trying to parse the file", e);
    }
  }

  // Executes executable file.
  private static void execTarget() {
    try {
      final String osName = System.getProperty("os.name");
      if (osName.startsWith("Win"))
        Runtime.getRuntime().exec("cmd /c start Run.exe");

      if (osName.startsWith("Mac")) {
        Process proc = Runtime.getRuntime().exec("python3 -m http.server");
        BufferedReader ioStream = new BufferedReader(new InputStreamReader(proc.getInputStream()));

        Runtime.getRuntime().exec("open http://localhost:8000/main.html");

        int line;
        while((line = ioStream .read()) != -1) {
          System.out.print((char) line);
        }

        proc.waitFor();
      }
    } catch (InterruptedException | IOException e) {
      System.out.println("Could not execute executable.");
    }
  }

/*
    ==============================================================================================
    Parser rules and AST generation definitions.
    ==============================================================================================
*/

// First non-terminal is prog.
  final public SimpleNode prog() throws ParseException {/*@bgen(jjtree) Prog */
  Prog jjtn000 = new Prog(JJTPROG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      setup();
      label_1:
      while (true) {
        switch (jj_nt.kind) {
        case STAGE:
        case ACTION:
        case PLAYER_TYPE:
        case NUMBER_TYPE:
        case CARD_TYPE:
        case SUIT_TYPE:
        case RANK_TYPE:
        case SEQUENCE_TYPE:
        case PILE_TYPE:
        case BOOLEAN_TYPE:
        case TEXT_TYPE:{
          ;
          break;
          }
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
        switch (jj_nt.kind) {
        case STAGE:{
          stage();
          break;
          }
        case ACTION:
        case PLAYER_TYPE:
        case NUMBER_TYPE:
        case CARD_TYPE:
        case SUIT_TYPE:
        case RANK_TYPE:
        case SEQUENCE_TYPE:
        case PILE_TYPE:
        case BOOLEAN_TYPE:
        case TEXT_TYPE:{
          function();
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(0);
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
{if ("" != null) return jjtn000;}
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
    throw new Error("Missing return statement in function");
  }

  final public void setup() throws ParseException {/*@bgen(jjtree) Setup */
  Setup jjtn000 = new Setup(JJTSETUP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(SETUP);
      setupBlock();
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void stage() throws ParseException {/*@bgen(jjtree) Stage */
  Stage jjtn000 = new Stage(JJTSTAGE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(STAGE);
      id();
      jj_consume_token(TO);
      id();
      block();
      block();
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void orExpr() throws ParseException {/*@bgen(jjtree) OrExpr */
  OrExpr jjtn000 = new OrExpr(JJTOREXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      andExpr();
      label_2:
      while (true) {
        switch (jj_nt.kind) {
        case OR:{
          ;
          break;
          }
        default:
          jj_la1[2] = jj_gen;
          break label_2;
        }
        jj_consume_token(OR);
        andExpr();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void andExpr() throws ParseException {/*@bgen(jjtree) AndExpr */
  AndExpr jjtn000 = new AndExpr(JJTANDEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      notExpr();
      label_3:
      while (true) {
        switch (jj_nt.kind) {
        case AND:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        jj_consume_token(AND);
        notExpr();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void notExpr() throws ParseException {/*@bgen(jjtree) NotExpr */
  NotExpr jjtn000 = new NotExpr(JJTNOTEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token not = null;
    try {
      switch (jj_nt.kind) {
      case NOT:{
        not = jj_consume_token(NOT);
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      equalsExpr();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
if (not != null) {
      jjtn000.jjtSetValue(true);
    }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void equalsExpr() throws ParseException {/*@bgen(jjtree) EqualsExpr */
  EqualsExpr jjtn000 = new EqualsExpr(JJTEQUALSEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      compareExpr();
      label_4:
      while (true) {
        switch (jj_nt.kind) {
        case EQUALS:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        jj_consume_token(EQUALS);
        compareExpr();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void compareExpr() throws ParseException {/*@bgen(jjtree) CompareExpr */
  CompareExpr jjtn000 = new CompareExpr(JJTCOMPAREEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      termExpr();
      label_5:
      while (true) {
        switch (jj_nt.kind) {
        case LESS_THAN:
        case LESS_THAN_EQUAL:
        case GREATER_THAN:
        case GREATER_THAN_EQUAL:
        case CONTAINS:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        comparator();
        termExpr();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void termExpr() throws ParseException {/*@bgen(jjtree) TermExpr */
  TermExpr jjtn000 = new TermExpr(JJTTERMEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      factorExpr();
      label_6:
      while (true) {
        switch (jj_nt.kind) {
        case PLUS:
        case MINUS:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_6;
        }
        termOperator();
        factorExpr();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void factorExpr() throws ParseException {/*@bgen(jjtree) FactorExpr */
  FactorExpr jjtn000 = new FactorExpr(JJTFACTOREXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      negativeExpr();
      label_7:
      while (true) {
        switch (jj_nt.kind) {
        case DIVIDE:
        case MULTIPLY:
        case MODULO:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
        factorOperator();
        negativeExpr();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void negativeExpr() throws ParseException {/*@bgen(jjtree) NegativeExpr */
  NegativeExpr jjtn000 = new NegativeExpr(JJTNEGATIVEEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token negative = null;
    try {
      switch (jj_nt.kind) {
      case MINUS:{
        negative = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      arrowExpr();
jjtree.closeNodeScope(jjtn000, true);
    jjtc000 = false;
if (negative != null) {
        jjtn000.jjtSetValue(true);
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void arrowExpr() throws ParseException {/*@bgen(jjtree) ArrowExpr */
  ArrowExpr jjtn000 = new ArrowExpr(JJTARROWEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      valueExpr();
      label_8:
      while (true) {
        switch (jj_nt.kind) {
        case ARROW:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_8;
        }
        jj_consume_token(ARROW);
        id();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  final public void valueExpr() throws ParseException {/*@bgen(jjtree) ValueExpr */
  ValueExpr jjtn000 = new ValueExpr(JJTVALUEEXPR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch (jj_nt.kind) {
      case LPAREN:{
        jj_consume_token(LPAREN);
        orExpr();
